fixed spacing between paragraphs in desktop mode and changed star size to 16px

--- a/Client/style/components.less
+++ b/Client/style/components.less
@@ -94,6 +94,7 @@
   min-height: 170px;
   flex-shrink: 1;
   height: 100%;
+  padding-bottom: 2%;
 }
 
 //right colum is review body and titles
@@ -104,6 +105,7 @@
   width: 62%;
   padding-left: 3%;
   height: 100%;
+  padding-bottom: 2%;
 }
 
 
@@ -116,7 +118,7 @@
 
 //overalStars graphic
 .overallStars {
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 2%;
   display: inline-block
 }
@@ -130,7 +132,7 @@
 
 //performance stars graphic
 .performanceStars{
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 2%;
   display: inline-block;
 }
@@ -144,7 +146,7 @@
 
 //story stars graphic
 .storyStars{
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 2%;
   display: inline-block;
 }
